# uirp-app

./: .env.example  .gitignore  README.md  config.toml.example  pyproject.toml
src/uirp/: __init__.py  __main__.py  cli.py  config.py  curate.py  errors.py  ids.py  platforms.py  textutil.py  web.py
src/uirp/ai/: __init__.py  adapter.py  backend_agent_sdk.py  backend_api_key.py  backend_fake.py
src/uirp/connectors/: __init__.py  browser.py  common.py  facebook_browser.py  facebook_manual.py  manual.py
src/uirp/core/: __init__.py  demo.py  jobs.py
src/uirp/pipeline/: __init__.py  extract.py  parse.py  read_image.py  transcribe.py  translate.py
src/uirp/prompts/: classify_relevance.md  extract_claims.md  read_image.md  translate.md  translate_query.md
src/uirp/report/: __init__.py  markdown.py
src/uirp/store/: __init__.py  db.py  evidence.py  schema.sql
src/uirp/store/migrations/: 002_fts.sql
tests/: test_pipeline.py  test_step1_store_jobs.py
