[project]
name = "uirp"
version = "0.1.0"
description = "Universal Intelligence Research Platform — nền tảng nghiên cứu tri thức cá nhân (CLI)"
requires-python = ">=3.12"
# Core stdlib-only ở bước 1-2 (store + scheduler). Thêm dần theo ARC §13:
#   bước 3 (AI adapter): "claude-agent-sdk"   — backend mặc định (STD-001)
#   bước 4 (Mode A):     "beautifulsoup4", "lxml"
#   bước 9 (Mode B):     "playwright"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
uirp = "uirp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uirp"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # STD4-R2

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
